fix github link on ios

--- a/src/entities/repository/ui/repository/repository.scss
+++ b/src/entities/repository/ui/repository/repository.scss
@@ -32,6 +32,8 @@
 
   &-githubLink {
     position: relative;
+    display: inline-block;
+
     &::before {
       position: absolute;
       content: "";
